[package]
name = "vulkan_raw"
version = "0.1.1"
authors = ["aisinker <aisinker@outlook.com>"]
repository = "https://github.com/aisinker/vulkan_raw"
license = "MIT"
description = "A raw Vulkan API bindings for Rust."
keywords = ["vulkan", "graphic", "bindings"]
edition = "2018"
build = "build.rs"

[features]
docs = []

[package.metadata.docs.rs]
features = ["docs",]

[dependencies]