[package]
name = "vulkan_raw"
version = "0.1.5"
authors = ["aisinker <aisinker@outlook.com>"]
repository = "https://github.com/aisinker/vulkan_raw"
license = "MIT"
description = "A raw Vulkan API bindings for Rust."
readme = "README.md"
keywords = ["vulkan", "graphic", "bindings"]
edition = "2018"
build = "build.rs"

[features]
docs = []

[package.metadata.docs.rs]
features = ["docs",]

[dependencies]
lazy_static = "1.4"
libloading = "0.5"