[package]
name = "vulkan_raw"
version = "0.1.9"
authors = ["aisinker <aisinker@outlook.com>"]
repository = "https://github.com/aisinker/vulkan_raw"
license = "MIT"
description = "A raw Vulkan API bindings for Rust."
readme = "README.md"
keywords = ["vulkan", "graphic", "bindings"]
edition = "2021"
build = "build.rs"

[features]
default = [
    "VulkanMemoryAllocator",

    "VK_KHR_surface",
    "VK_KHR_swapchain",
    "VK_KHR_deferred_host_operations",
    "VK_KHR_pipeline_library",
    "VK_KHR_acceleration_structure",
    "VK_KHR_ray_tracing_pipeline",
    "VK_KHR_ray_query",
    "VK_EXT_debug_utils",
    "VK_EXT_index_type_uint8",
    "VK_EXT_memory_budget",
]

VK_VERSION_1_3 = []

VulkanMemoryAllocator = []

VK_KHR_surface = []
VK_KHR_swapchain = ["VK_KHR_surface"]
VK_KHR_deferred_host_operations = []
VK_KHR_pipeline_library = []
VK_KHR_acceleration_structure = ["VK_KHR_deferred_host_operations"]
VK_KHR_ray_tracing_pipeline = ["VK_KHR_acceleration_structure"]
VK_KHR_ray_query = ["VK_KHR_acceleration_structure"]
VK_EXT_debug_utils = []
VK_EXT_index_type_uint8 = []
VK_EXT_memory_budget = []

VK_KHR_win32_surface = ["VK_KHR_surface"]
VK_KHR_external_fence_win32 = []

VK_KHR_external_fence_fd = []

[dependencies]
lazy_static = "1.4"
libloading = "0.7"
bitflags = "*"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }